[project]
name = "lg-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xjw", email = "xiaojunwen@speacemv.net" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
]

[project.scripts]
lg-tutorial = "lg_tutorial.main:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

